<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PeopleDetailsFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow android:layout_width="1dp">
                    <TextView
                        android:text="@string/name"
                        android:padding="3dip"/>
                    <TextView
                        android:layout_weight="1"
                        android:padding="3dip"
                        android:textAlignment="textEnd"
                        android:text="@string/name_value"
                        android:id="@+id/name"/>
                </TableRow>
                <TableRow android:layout_width="1dp">
                    <TextView
                        android:text="@string/department"
                        android:padding="3dip"/>
                    <TextView
                        android:layout_weight="1"
                        android:padding="3dip"
                        android:textAlignment="textEnd"
                        android:text="@string/department_value"
                        android:id="@+id/department"/>
                </TableRow>
                <TableRow android:layout_width="1dp">
                    <TextView
                        android:text="@string/people_details_birthday"
                        android:padding="3dip"/>
                    <TextView
                        android:layout_weight="1"
                        android:padding="3dip"
                        android:textAlignment="textEnd"
                        android:text="@string/app_name"
                        android:id="@+id/birthday"/>
                </TableRow>
                <TableRow android:layout_width="1dp" android:id="@+id/deathday_container">
                    <TextView
                        android:text="@string/people_details_deathday"
                        android:padding="3dip"/>
                    <TextView
                        android:layout_weight="1"
                        android:padding="3dip"
                        android:textAlignment="textEnd"
                        android:text="@string/app_name"
                        android:id="@+id/deathday"/>
                </TableRow>
                <TableRow android:layout_width="1dp"
                    android:id="@+id/place_of_birth_container">
                    <TextView
                        android:text="@string/people_details_place_of_birth"
                        android:padding="3dip"/>
                    <TextView
                        android:layout_weight="1"
                        android:padding="3dip"
                        android:textAlignment="textEnd"
                        android:text="@string/app_name"
                        android:id="@+id/place_of_birth"/>
                </TableRow>
                <TableRow
                    android:id="@+id/homepage_container">
                    <TextView
                        android:text="@string/people_details_homepage"
                        android:padding="3dip"/>
                    <TextView
                        android:padding="3dip"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:text="@string/app_name"
                        android:autoLink="web"
                        android:textColorLink="@color/purple_700"
                        android:id="@+id/homepage"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/people_details_biography"
                        android:padding="3dip"/>
                </TableRow>
                <TextView
                    android:padding="3dip"
                    android:layout_gravity="right"
                    android:text="@string/app_name"
                    android:justificationMode="inter_word"
                    android:id="@+id/biography"/>
            </TableLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>