<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MovieDetailsFragment"
             android:orientation="vertical">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow android:layout_width="1dp">
                    <TextView
                        android:text="@string/details_relase_date"
                        android:padding="3dip"/>
                    <TextView
                        android:layout_weight="1"
                        android:padding="3dip"
                        android:textAlignment="textEnd"
                        android:text="@string/app_name"
                        android:id="@+id/releaseDate"/>
                </TableRow>
                <TableRow android:layout_width="1dp">
                    <TextView
                        android:text="@string/details_duration"
                        android:padding="3dip"/>
                    <TextView
                        android:layout_weight="1"
                        android:padding="3dip"
                        android:textAlignment="textEnd"
                        android:text="@string/app_name"
                        android:id="@+id/duration"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/details_status"
                        android:padding="3dip"/>
                    <TextView
                        android:padding="3dip"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:text="@string/app_name"
                        android:id="@+id/status"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/details_budget"
                        android:padding="3dip"/>
                    <TextView
                        android:padding="3dip"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:text="@string/app_name"
                        android:id="@+id/budget"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/details_revenue"
                        android:padding="3dip"/>
                    <TextView
                        android:padding="3dip"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:text="@string/app_name"
                        android:id="@+id/revenue"
                        android:layout_column="1"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/details_genres"
                        android:padding="3dip"/>
                    <TextView
                        android:padding="3dip"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:text="@string/app_name"
                        android:id="@+id/genres"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/details_language"
                        android:padding="3dip"/>
                    <TextView
                        android:padding="3dip"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:text="@string/app_name"
                        android:id="@+id/language"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/details_home_page"
                        android:padding="3dip"/>
                    <TextView
                        android:padding="3dip"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:text="@string/app_name"
                        android:autoLink="web"
                        android:textColorLink="@color/purple_700"
                        android:id="@+id/home_page"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/details_overview"
                        android:padding="3dip"/>
                </TableRow>
                <TextView
                    android:padding="3dip"
                    android:layout_gravity="right"
                    android:text="@string/app_name"
                    android:justificationMode="inter_word"
                    android:id="@+id/detailed_overview"/>
            </TableLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>